tests/basic/check/not_iff/110.pan.out
tests/basic/check/not_iff/110.pan:4:1-5: error: cannot solve constraints of f110
tests/basic/check/not_iff/110.pan:7:1-5: error: cannot solve constraints of f111
tests/basic/check/not_iff/110.pan:10:1-5: error: cannot solve constraints of f112
tests/basic/check/not_iff/110.pan:13:1-5: error: cannot solve constraints of f113
tests/basic/check/not_iff/110.pan:16:1-5: error: cannot solve constraints of f114
tests/basic/check/not_iff/110.pan:19:1-5: error: cannot solve constraints of f115
tests/basic/check/not_iff/110.pan:22:1-5: error: cannot solve constraints of f116